# contribute_FunASR-Test

./: .env.example  .gitignore  01 从麦克风流式转录.py  01 从麦克风流式转录SenseVoice.py  02 从文件流式转录.py  02 从文件流式转录SenseVoice.py  FunASR_优化配置说明.md  README.md  pyproject.toml  requirements.txt  run_fastapi.py  run_system.py  run_tests.py  start_asr_system.py  start_frontend.py  start_system.bat  streaming.py  switch_asr_config.py  switch_config.py  test_asr_optimization.py  test_frontend.py  test_integrated_system.py  uv_install.ps1  使用指南.md
android_integration/: AUDIO_TROUBLESHOOTING.md  MEETING_SUMMARY_GUIDE.md  README.md  USAGE_GUIDE.md  build.gradle  check_project.py  fix_build_issues.md  gradle.properties  gradlew  settings.gradle
android_integration/app/: build.gradle  proguard-rules.pro
app/: __init__.py  main.py
backend/: asr_service.py  database.py  file_service.py  main.py  meeting_service.py  models.py  requirements.txt  summary_service.py
docs/: Git-MCP-Server配置指南.md  LLM-Provider.md  Meeting-Summary-API.md  UI优化说明.md  architecture_overview.md  deployment_guide.md  meeting_assistant_prd.md  speaker_separation_technical.md  streaming_asr_analysis.md  streaming_asr_technical.md  system_flow.md  web_interface_technical.md  会议总结功能说明.md  使用指南.md  全面提示词优化说明.md  提示词优化说明.md  生产环境重构方案.md  简化重构方案.md  重构实施指南.md  项目功能模块与代码执行流程.md  项目架构与流程文档.md  项目架构与流程说明.md  项目结构说明.md
frontend/: .env.production  .eslintrc.cjs  .gitignore  .prettierignore  README.md  env.d.ts  index.html  style.css  tailwind.config.js  vite.config.ts
src/: __init__.py  config_switcher.py  diarization_demo.py  system_launcher.py  websocket_server.py
static/: llm_test.html
test/: test_asr_optimization.py  test_frontend.py
top/: app.py  download_model.py  startup.bat
(+78 files in other folders)
