[tool.poetry]
name = "asr_service"
version = "0.1.0"
description = ""
authors = ["qiaogaojian <qiaogaojian@vip.qq.com>"]
readme = "README.md"
packages = [{include = "src", from="."}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
