[tool.poetry]
name = "asr_service"
version = "0.1.0"
description = ""
authors = ["qiaogaojian <qiaogaojian@vip.qq.com>"]
readme = "README.md"
packages = [{include = "src", from="."}]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^12.0"
numpy = "^1.24.0"
sounddevice = "^0.4.6"
rich = "^13.0.0"
colorama = "^0.4.6"
soundfile = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
